# fishcast123

./: .env.example  .replit  README.md  REPLIT_SETUP.md  ai_image.py  catch_logger.py  forecast.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test_api.py  vite.config.ts  vite.config.ts.timestamp-1751606296533-3b2547a1f87fc.mjs
src/: App.tsx  index.css
src/components/auth/: GoogleButton.tsx  LoginScreen.tsx  SignUpScreen.tsx
src/components/common/: LoadingScreen.tsx
src/components/dashboard/: Dashboard.tsx  QuickStats.tsx  RecentCatches.tsx  WeatherWidget.tsx
src/components/features/: CatchForm.tsx  CatchList.tsx  CatchLog.tsx  FishingForecast.tsx  SpotAnalyzer.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/profile/: Profile.tsx
src/contexts/: AuthContext.tsx  ThemeContext.tsx
static/: index.html
